# cfr_simulation

./: .gitignore  README.md  frames.gv
auto_scripts/desktop/: start_cfr_logitech.desktop
auto_scripts/setup/: install_deps.bash  setup_tmux.bash
auto_scripts/tmux/: start_cfr_logitech.bash  start_cfr_rc.bash
cfr_actuation/: CMakeLists.txt  package.xml
cfr_actuation/config/: joy_remapper.yaml  motor_limits.yaml
cfr_actuation/include/cfr_actuation/: cfr_actuation.hpp
cfr_actuation/launch/: start.launch.py  start_mpc.launch.py  start_rc.launch.py
cfr_actuation/src/: cfr_actuation.cpp  cfr_actuation_node.cpp
cfr_blades_control/: CMakeLists.txt  package.xml
cfr_blades_control/config/: cfr_blades_params.yaml  f710.yaml  spmr1010.yaml
cfr_blades_control/launch/: start.launch.py  start_rc.launch.py
cfr_blades_control/src/: cfr_blades_node.cpp
cfr_control/: CMakeLists.txt
cfr_description/: CMakeLists.txt
cfr_description/urdf/: cfr.urdf.xacro  cfr_description.urdf.xacro
cfr_dynamics/: CMakeLists.txt  package.xml
cfr_dynamics/config/: environment.yaml
cfr_dynamics/launch/: start.launch.py
cfr_dynamics/src/: cfr_dynamics.cpp  cfr_dynamics_node.cpp
cfr_feedback_server/: CMakeLists.txt  package.xml
cfr_feedback_server/include/cfr_feedback_server/: cfr_feedback_server.hpp
cfr_feedback_server/node/: cfr_feedback_client_node.cpp
cfr_feedback_server/src/: cfr_feedback_server.cpp
cfr_gazebo/: CMakeLists.txt  package.xml
cfr_gazebo/launch/: cfr_empty_world.launch  gazebo.launch.py  spawn_cfr.launch
cfr_gazebo/worlds/: cfr_boundary.world
cfr_kinematics_states/: CMakeLists.txt  package.xml
cfr_kinematics_states/launch/: start.launch.py
cfr_kinematics_states/src/: cfr_kinematics_states.cpp  cfr_kinematics_states_node.cpp
cfr_manager/: CMakeLists.txt  package.xml
cfr_manager/include/cfr_manager/: cfr_feedback_broadcastor.hpp  cfr_feedback_msg.hpp  cfr_manager.hpp
cfr_manager/src/: cfr_feedback_broadcastor.cpp  cfr_manager.cpp
cfr_mpc/: CMakeLists.txt  package.xml
cfr_mpc/launch/: start.launch.py
cfr_mpc/lib/: mpcmoveCodeGeneration.cpp  norm.h  qpkwik.cpp  xnrm2.cpp  xnrm2.h
cfr_mpc/src/: cfr_mpc.cpp  cfr_mpc_node.cpp
cfr_navigation/: CMakeLists.txt  package.xml
cfr_protocol_comm/: CMakeLists.txt  package.xml
cfr_protocol_comm/node/: protocol_client_node.cpp  protocol_server_node.cpp
cfr_protocol_comm/src/: protocol_client.cpp  protocol_server.cpp
cfr_protocol_interfaces/: CMakeLists.txt  package.xml
cfr_protocol_interfaces/include/cfr_protocol_interfaces/: protocol.hpp  protocol_server.hpp
cfr_protocol_interfaces/src/: protocol_server.cpp
cfr_protocol_interfaces/srv/: TriggerService.srv
cfr_simulation/cfr_control/: CMakeLists.txt  package.xml
cfr_simulation/cfr_description/: CMakeLists.txt  package.xml
cfr_simulation/cfr_gazebo/: CMakeLists.txt  package.xml
cfr_sm_interfaces/: CMakeLists.txt  package.xml
cfr_sm_interfaces/srv/: TriggerEvent.srv
cfr_socket_comm/: CMakeLists.txt  package.xml
cfr_socket_comm/config/: auto_client_command.yaml  auto_command_client.yaml  client_command.yaml  feedback_client.yaml
cfr_socket_comm/doc/: cfr todo 13 March 2023.odt
cfr_socket_comm/include/cfr_socket_comm/: cfr_auto_command_client.hpp  cfr_client_control.hpp  cfr_feedback_client.hpp  cfr_mock_feedback_server.hpp  cfr_protocol_handler.hpp  cfr_protol_handler.hpp  cfr_socket_channel.hpp  cfr_socket_client.hpp  cfr_socket_server.hpp  message_handler.hpp
cfr_socket_comm/launch/: start_auto_client.launch.py  start_feedback_client.launch.py
cfr_socket_comm/lib/: cfr_sm_client.hpp
cfr_socket_comm/node/: blocking_client_node.cpp  cfr_auto_command_client_node.cpp  cfr_client_control_node.cpp  cfr_feedback_client_node.cpp  cfr_manual_command_client_node.cpp  cfr_mock_command_server_node.cpp  cfr_mock_feedback_server_node.cpp  cfr_socket_client_node.cpp  cfr_socket_server_node.cpp  socket_auto_handshake_node  socket_auto_handshake_node.cpp  socket_joy  socket_joy_node.cpp  timeout_client.cpp
cfr_socket_comm/src/: blocking_tcp_client.cpp  cfr_auto_command_client.cpp  cfr_client_control.cpp  cfr_feedback_client.cpp  cfr_mock_feedback_server.cpp  cfr_socket_client.cpp  cfr_socket_comm_node.cpp  cfr_socket_server.cpp  cfr_socketcomm_node.cpp  message_handler.cpp
cfr_state_machine/: CMakeLists.txt  package.xml
cfr_state_machine/doc/: cfr_fsm.cpp  main.cpp
cfr_state_machine/include/: cfr_state_machine.hpp
cfr_state_machine/include/cfr_state_machine/: cfr_events.hpp  cfr_sm_client.hpp  cfr_sm_server.hpp  cfr_sm_states.hpp  cfr_state_machine.hpp
cfr_state_machine/include/cfr_state_machine/common/: base_reaction.hpp  boost_sc.hpp
cfr_state_machine/include/cfr_state_machine/services/: cfr_sm_client.hpp
cfr_state_machine/node/: cfr_sm_node.cpp
cfr_state_machine/src/: cfr_fsm_node.cpp  cfr_manager.cpp  cfr_sm_client.cpp  cfr_sm_node.cpp  cfr_sm_server.cpp  cfr_state_machine.cpp
cfr_state_machine/src/services/: cfr_sm_client.cpp  cfr_sm_server.cpp
cfr_state_machine/srv/: Start.srv
cfr_states/: CMakeLists.txt  package.xml
cfr_states/include/cfr_states/: cfr_states.hpp
cfr_states/launch/: start.launch.py
cfr_states/src/: cfr_states.cpp  cfr_states_node.cpp
cfr_telejoy_config/: CMakeLists.txt  package.xml
cfr_telejoy_config/config/: f710.config.yaml  spmr1010.config.yaml
cfr_telejoy_config/launch/: teleop-launch.py  teleop-launch_mpc.py
doc/mpc1_zip/: buildInfo.mat  main.cpp  mpcmoveCodeGeneration_data.cpp  mpcmoveCodeGeneration_spec.h  mpcmoveCodeGeneration_terminate.cpp  out  qpkwik.h  rtw_proj.tmw  xgerc.cpp
joy_publisher/: CMakeLists.txt  package.xml
joy_publisher/launch/: start.launch.py
joy_publisher/src/: joy_publisher_node.cpp
path_tracer/: CMakeLists.txt  package.xml
path_tracer/launch/: start.launch.py
path_tracer/rviz/: cfr.rviz
path_tracer/src/: path_tracer.cpp  path_tracer.hpp  path_tracer_node.cpp
popup/: a.out  main.cpp
teleop_twist_joy/: package.xml
teleop_twist_joy/config/: f710.config.yaml  (+1 more)
tmux_conf/: start_cfr_logitech.bash  start_cfr_rc.bash
(+60 files in other folders)
